--- a/.gitignore
+++ b/.gitignore
@@ -17,14 +17,14 @@
 !/log/.keep
 !/tmp/.keep
 
-# Ignore uploaded files in development
-/storage/*
-
-/node_modules
-/yarn-error.log
-
-/public/assets
+# Ignore Byebug command history file.
 .byebug_history
 
-# Ignore master key for decrypting credentials and more.
-/config/master.key
+# Ignore application configuration
+/config/application.yml
+
+# Ignore test coverage
+/coverage/*
+
+# Ignore node modules
+/node_modules/
